first stage over